--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,7 +10,7 @@ body {
   font-size: 32px;
   padding: 0;
   margin: 0;
-  background-color: red;
+  background-color: grey;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,29 +23,37 @@ body {
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 70%;
+  width: 60%;
   height: 70%;
   background-color: white;
   background-image: url(../../static/img/pattern-curve.svg);
   background-repeat: no-repeat;
   background-position: bottom left;
-  padding: 1em 1em;
+  background-size: 400px;
 }
 
 .card {
+  padding: 1em;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
 }
 
 .contenido {
+  width: 105%;
+  padding-left: 2.5em;
   background-image: url(../../static/img/pattern-quotes.svg);
   background-repeat: no-repeat;
   background-position: top center;
+  background-size: 80px;
+  background-position-x: 150px;
+  z-index: 5;
 }
 
 .texto {
-  font-size: 0.7em;
+  padding-top: 2.5em;
+  margin: 0;
+  font-size: 0.6em;
   color: var(--darkBlue);
   font-weight: lighter;
 }
