--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -88,4 +88,54 @@ body {
     z-index: 1;
     width: 70%;
     height: 70%;
+    box-shadow: 7px 15px 6px 0px rgba(100, 100, 100, 0.37);
+}
+
+.botones {
+    display: flex;
+    position: absolute;
+    bottom: 40px;
+    left: 80px;
+    z-index: 10;
+    background-color: white;
+    width: 50px;
+    height: 30px;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0 10px;
+    border-radius: 20px;
+}
+
+.flecha {
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+}
+
+.bizq {
+    width: 20px;
+    border: 0;
+    background-color: white;
+    background-image: url(../../static/img/icon-prev.svg);
+    background-repeat: no-repeat;
+    background-size: 8px;
+    background-position: center center;
+    &:hover {
+        //   background-color: red;
+    }
+    outline:none;
+}
+
+.bder {
+    width: 20px;
+    border: 0;
+    background-color: white;
+    background-image: url(../../static/img/icon-next.svg);
+    background-repeat: no-repeat;
+    background-size: 9px;
+    background-position: center center;
+    &:hover {
+        //  background-color: red;
+    }
+    outline:none;
 }
